Ajuste da cor da borda dos alerts

--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -15,7 +15,7 @@
   }
 
   .bg-warning {
-    color: #fff583;
+    color: #faeda5;
   }
 
   .text-warning {
@@ -23,7 +23,7 @@
   }
 
   .border-waring {
-    color: #b6d4fe;
+    color: #eeeeee;
   }
 
   .bd-placeholder-img {
