Ajuste fino do comportamento do enter com o campo vazio

--- a/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
@@ -62,7 +62,7 @@
             </div>
             <div>
                 <label for="table-responsive" class="label mb-1 text-primary"><i
-            class="bi bi-server"></i>&nbsp;Tabela</label>&nbsp;&nbsp;<span class="text-success h6" id="table-name"></span>
+            class="bi bi-server"></i>&nbsp;Tabela</label>&nbsp;&nbsp;
                 <div class="table-responsive border-top">
                     <table class="table table-hover">
                         <thead>
@@ -88,6 +88,5 @@
     </form>
 </div>
 <script src="assets/javascript/framework/tools/dev/entity/create/settings.js "></script>
-<script src="assets/javascript/framework/tools/dev/entity/create/finish.js "></script>
-<script src="assets/javascript/framework/tools/dev/entity/create/draft.js "></script>
+<script src="assets/javascript/framework/tools/dev/entity/create/entity.js "></script>
 <script src="assets/javascript/framework/tools/dev/entity/create/form.js "></script>
