--- a/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
@@ -1,4 +1,4 @@
-<div class="flex-column mb-5">
+<div class="flex-column">
     <form class="form-group">
         <div class="my-3 border border-light-grey p-3 rounded">
             <div class="alert alert-dismissible show" role="alert" style="border: 1px solid #eeeeee">
@@ -61,32 +61,57 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
             <div>
-                <label for="table-responsive" class="label mb-1 text-primary"><i
-            class="bi bi-server"></i>&nbsp;Tabela</label>&nbsp;&nbsp;
-                <div class="table-responsive border-top">
-                    <table class="table table-hover">
-                        <thead>
-                            <th class="text-left">Campo</th>
-                            <th class="text-center" style="width: 12rem">Privacidade&nbsp;<i class="bi bi-lock-fill"></i></th>
-                            <th class="text-center" style="width: 12rem">Tipo</th>
-                            <th class="text-center" style="width: 12rem">Tamanho</th>
-                            <th class="text-left" style="width: 2.5rem">Opcional</th>
-                            <th class="text-left fw-bold" style="width: 2.5rem">
-                                <i class="bi bi-search"></i>
-                            </th>
-                        </thead>
-                        <tbody id="fields-settings"></tbody>
-                    </table>
-                </div>
-            </div>
-            <div>
-                <button class="btn btn-outline-secondary" id="btn-entity-create-restart">Reiniciar</button>
-                <button class="btn btn-success" id="btn-entity-create">Criar</button>
-            </div>
-        </div>
-        <div style="height: 5rem ">&nbsp;</div>
+                <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                        <button class="nav-link active" id="nav-form-tab" data-bs-toggle="tab" data-bs-target="#nav-form" type="button" role="tab" aria-controls="nav-form" aria-selected="true"><i class="bi bi-ui-checks"></i>&nbsp;Formulário</label>&nbsp;&nbsp;</button>
+                        <button class="nav-link" id="nav-code-tab" data-bs-toggle="tab" data-bs-target="#nav-code" type="button" role="tab" aria-controls="nav-code" aria-selected="false"><i class="bi bi-code-square"></i>&nbsp;Código</button>
+                    </div>
+                </nav>
+                <div class="tab-content">
+                    <div class="tab-pane show active" id="nav-form" role="tabpanel" aria-labelledby="nav-form-tab">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                  <tr>
+                                    <th class="text-left">Campo</th>
+                                    <th class="text-center" style="width: 10rem">Privacidade&nbsp;<i class="bi bi-lock-fill"></i></th>
+                                    <th class="text-center" style="width: 10rem">Tipo</th>
+                                    <th class="text-center" style="width: 8rem">Tamanho</th>
+                                    <th class="text-left" style="width: 2.5rem">Opcional</th>
+                                    <th class="text-left fw-bold" style="width: 2.5rem">
+                                        <i class="bi bi-search"></i>
+                                    </th>
+                                    </tr>
+                                </thead>
+                                <tbody id="fields-settings"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="nav-code" role="tabpanel" aria-labelledby="nav-code-tab">
+                      <div class="table-responsive">
+                        <table class="table table-hover">
+                                <thead>
+                                  <tr>
+                                        <th class="text-left">Json</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td id="entity-json"></td>
+                                  </tr>
+                                </tbody>
+                            </table>
+                      </div>
+                    </div>
+                            <div>
+                                <button class="btn btn-outline-secondary" id="btn-entity-create-config"><i class="bi bi-box"></i>&nbsp;&nbsp;Configurar</button>
+                                <button class="btn btn-success" id="btn-entity-create">Criar&nbsp;&nbsp;<i class="bi bi-box"></i></button>
+                            </div>
+                    </div>
+                    </div>
+                    </div>
     </form>
-</div>
-<script src="assets/javascript/framework/tools/dev/entity/create/settings.js "></script>
-<script src="assets/javascript/framework/tools/dev/entity/create/entity.js "></script>
-<script src="assets/javascript/framework/tools/dev/entity/create/form.js "></script>
+    </div>
+    <script src="assets/javascript/framework/tools/dev/entity/create/settings.js "></script>
+    <script src="assets/javascript/framework/tools/dev/entity/create/entity.js "></script>
+    <script src="assets/javascript/framework/tools/dev/entity/create/form.js "></script>
