--- a/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
@@ -64,8 +64,8 @@
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <button class="nav-link active" id="nav-form-tab" data-bs-toggle="tab" data-bs-target="#nav-form" type="button" role="tab" aria-controls="nav-form" aria-selected="true"><i class="bi bi-ui-checks"></i>&nbsp;Form</label>&nbsp;&nbsp;</button>
-                        <button class="nav-link" id="nav-code-sql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-sql" type="button" role="tab" aria-controls="nav-code-sql" aria-selected="false"><i class="bi bi-code-square"></i>&nbsp;Sql</button>
-                        <button class="nav-link" id="nav-code-entitysql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-entitysql" type="button" role="tab" aria-controls="nav-code-entitysql" aria-selected="false"><i class="bi bi-code-square"></i>&nbsp;entitySql</button>
+                        <button class="nav-link" id="nav-code-sql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-sql" type="button" role="tab" aria-controls="nav-code-sql" aria-selected="false"><i class="bi bi-server"></i>&nbsp;Sql</button>
+                        <button class="nav-link" id="nav-code-entitysql-tab" data-bs-toggle="tab" data-bs-target="#nav-code-entitysql" type="button" role="tab" aria-controls="nav-code-entitysql" aria-selected="false"><i class="bi bi-box"></i>&nbsp;aes.</button>
                     </div>
                 </nav>
                 <div class="tab-content">
