--- a/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-form-inc.ejs
@@ -129,6 +129,7 @@
                     </div>
     </form>
     </div>
+    <script src="assets/javascript/framework/tools/dev/entity/create/pretty.js "></script>
     <script src="assets/javascript/framework/tools/dev/entity/create/settings.js "></script>
     <script src="assets/javascript/framework/tools/dev/entity/create/entity.js "></script>
     <script src="assets/javascript/framework/tools/dev/entity/create/form.js "></script>
