Ajuste fino da interface

--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,25 +1,25 @@
 <nav class="navbar navbar-expand-md fixed-top bg-white px-3 pt-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/framework"><img src="assets/images/arte-e-software-cubo.svg" width="160px"
-        height="40px" /></a>
+    <a class="navbar-brand" href="/framework"><img src="assets/images/arte-e-software-cubo.svg"
+        style="width: 11rem !important" /></a>
     <div class="container-fluid">
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <ul class="nav nav-tabs" id="nav-bar" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop"
             type="button" role="tab" aria-controls="nav-desktop" aria-selected="true">
-            <i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Mesa
+            <i class="bi bi-person-circle"></i>
           </button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps" type="button"
             role="tab" aria-controls="nav-apps" aria-selected="false">
-            <i class="bi bi-grid"></i>&nbsp;&nbsp;Aplicativos
+            <i class="bi bi-grid"></i>
           </button>
         </li>
         <li class="nav-item" role="presentation">
           <button class="nav-link" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools" type="button"
             role="tab" aria-controls="nav-tools" aria-selected="false">
-            <i class="bi bi-cpu"></i>&nbsp;&nbsp;Ferramentas
+            <i class="bi bi-gear"></i>
           </button>
         </li>
       </ul>
