--- a/views/includes/framework/desktop/desktop-inc.ejs
+++ b/views/includes/framework/desktop/desktop-inc.ejs
@@ -1,9 +1,9 @@
 <div class="tab-pane show active" id="nav-desktop" role="tabpanel" aria-labelledby="nav-desktop-tab">
-    <div class="alert alert-warning alert-dismissible show" role="alert">
-        <strong><i class="bi bi-ui-checks-grid"></i>&nbsp;&nbsp;Mesa</strong><small> : requer permissão
-            [<strong>desktop</strong>]</small>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <div id="desktop"></div>
-    <div class="container-alert alert-desktop"></div>
+  <div class="alert alert-warning alert-dismissible show" role="alert">
+    <strong><i class="bi bi-person-circle"></i>&nbsp;&nbsp;Mesa</strong><small> : requer permissão
+      [<strong>desktop</strong>]</small>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <div id="desktop"></div>
+  <div class="container-alert alert-desktop"></div>
 </div>
