--- a/views/includes/framework/tools/tools-inc.ejs
+++ b/views/includes/framework/tools/tools-inc.ejs
@@ -5,7 +5,7 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <div class="d-flex align-items-start text-left">
-    <div class="nav flex-column nav-pills me-3" style="width: 14.4rem !important" id="v-pills-tab" role="tablist"
+    <div class="nav flex-column nav-pills me-3" style="width: 245px !important" id="v-pills-tab" role="tablist"
       aria-orientation="vertical">
       <div class="nav-link text-left" id="v-pills-dev-tab" data-bs-toggle="pill" data-bs-target="#v-pills-dev"
         type="button" role="tab" aria-controls="v-pills-dev" aria-selected="false">
