É a ansiedade fgalando mais alto

--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -1,4 +1,4 @@
-<link rel="canonical" href="https://Persona360.com.br/">
+<link rel="canonical" href="https://aes.tec.br/">
 <link href="assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
