--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md fixed-top bg-white px-3 pt-3">
+<nav class="navbar navbar-expand-md fixed-top bg-white px-3">
   <div class="container-fluid">
     <a class="navbar-brand" href="/framework"><img src="assets/images/arte-e-software-cubo.svg"
         style="width: 175px !important" /></a>
