A INTERFACE ficou pronta, repito: A INTERFACE

--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -2,18 +2,8 @@
 <link href="assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
+  body {
+    background-color: #eeeeee;
+    padding-top: 1rem;
   }
 </style>
-<link href="assets/css/navbar-top-fixed.css" rel="stylesheet">
