--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -3,7 +3,7 @@
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
   body {
-    background-color: #eeeeee;
+    background-color: #ecf0f7;
     padding-top: 1rem;
   }
 </style>
