--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,32 +1,41 @@
-<nav class="navbar navbar-expand-md fixed-bottom px-3" style="opacity: .75; background-color: #eeeeee;">
+<style>
+  .active {
+    color: #6083cf !important;
+  }
+</style>
+<nav class="navbar navbar-expand-md fixed-bottom px-1 shadow" style="background-color: #6083cf;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/framework"><img src="assets/images/arte-e-software-cubo.svg"
-        style="width: 175px !important" /></a>
+    <div>
+      <a class="btn btn-success" href="/framework"><i class="bi bi-arrow-clockwise"></i></a>
+    </div>
+    <div class="p-2">
+      <div class="form-check form-switch text-warning">
+        <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox"
+          checked /><i class="bi bi-bookmark-x-fill"></i>
+      </div>
+    </div>
     <div class="container-fluid">
       <ul class="nav nav-tabs" id="nav-bar" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop"
+          <button class="nav-link text-white" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop"
             type="button" role="tab" aria-controls="nav-desktop" aria-selected="true">
             <i class="bi bi-person-circle"></i>
           </button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps" type="button"
-            role="tab" aria-controls="nav-apps" aria-selected="false">
+          <button class="nav-link text-white" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps"
+            type="button" role="tab" aria-controls="nav-apps" aria-selected="false">
             <i class="bi bi-grid"></i>
           </button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools" type="button"
-            role="tab" aria-controls="nav-tools" aria-selected="false">
+          <button class="nav-link text-white" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools"
+            type="button" role="tab" aria-controls="nav-tools" aria-selected="false">
             <i class="bi bi-gear"></i>
           </button>
         </li>
       </ul>
     </div>
-    <div class="form-check form-switch align-middle text-warning">
-      <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox"
-        checked /><i class="bi bi-bookmark-x-fill"></i>
-    </div>
+    <img src="assets/images/arte-e-software-cubo.svg" style="width: 10rem !important" />
   </div>
 </nav>
